parser/src/test/resources/corpus/valid/23_let_function_call.ff
rule "Let Functions" {
  let lower = max(0, gross_return - hurdle_amount)
  let cap = min(excess, above_hwm)
}
