parser/src/test/resources/corpus/invalid/41_function_call_missing_close.ff
rule "Func Missing Close" {
  let x = max(0, above_hwm
}
